--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>NavBar
         <div class="Navarea"></div>
          <div class="search">
-          <img src="/home/urbain/images/search image.png">
+          <img src="/home/urbain/images/searchimage.png">
          </div>
          <div> search zone</div>
          <div> alarm
