--- a/index.html
+++ b/index.html
@@ -11,19 +11,26 @@
 </head>
 <body>
     <div class="container">
-      <nav>NavBar
-        <div class="Navarea"></div>
-         <div class="search">
-          <img src="/home/urbain/images/searchimage.png">
-         </div>
-         <div> search zone</div>
-         <div> alarm
-          <img src="alarme.png">
-         </div>
-         <div>?</div>
-         <div>?</div>
-         <div>Morgan oakley</div>
-      </nav>
+      <nav>
+        <div class="Navarea">
+          <div> <img class="imgsearch" src="/home/urbain/ProjetGroup5/images/searchImage.png"></div>
+          <div> search zone</div>
+          <div><img class="imgsearch" src="/home/urbain/ProjetGroup5/images/alarme.png"></div>
+          <div>?</div>
+          <div>?</div>
+          <div>Morgan oakley</div>
+      </div>
+      <div class="morganzone">
+        <div> <img class="imgsearch" src="/home/urbain/ProjetGroup5/images/searchImage.png"></div>
+        <div>
+          <h6> Hi there</h6>
+          <h5>i'm Morgan Oakley(@ morgan)</h5>
+        </div>
+        <div class="text"> New</div>
+        <div class="text">Upload</div>
+        <div class="text">Share</div>
+      </div>
+    </nav>
       <main>Main</main>
       <div id="sidebar">Sidebar</div>
       <div id="content1">content1</div>
