feat:arrangement navBar content

--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
       <nav>
         <div class="Navarea">
           <div> <img class="imgsearch" src="/home/urbain/ProjetGroup5/images/searchImage.png"></div>
-          <div> search zone</div>
+          <div class="sz"></div>
           <div><img class="imgsearch" src="/home/urbain/ProjetGroup5/images/alarme.png"></div>
-          <div>?</div>
           <div>?</div>
           <div>Morgan oakley</div>
       </div>
       <div class="morganzone">
         <div> <img class="imgsearch" src="/home/urbain/ProjetGroup5/images/searchImage.png"></div>
         <div>
-          <h6> Hi there</h6>
-          <h5>i'm Morgan Oakley(@ morgan)</h5>
+          <h6> Hi there <br>
+            i'm Morgan Oakley(@ morgan)</h6>
         </div>
         <div class="text"> New</div>
         <div class="text">Upload</div>
