feat:ajout icônes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +7,19 @@
   <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto">
           <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@6.5.95/css/materialdesignicons.min.css">
+    <title>GDA GROUP5</title>
 </head>
 <body>
     <div class="container">
       <nav>
         <div class="Navarea">
-          <div> <img class="imgsearch" src="/home/urbain/ProjetGroup5/images/searchImage.png"></div>
+          <div> <span class="mdi mdi-magnify" style="font-size: 20px; "></span> </div>
           <div class="sz"></div>
-          <div><img class="imgsearch" src="/home/urbain/ProjetGroup5/images/alarme.png"></div>
-          <div>?</div>
+          <div><span class="mdi mdi-bell-ring-outline" style="font-size: 20px; "></span> </div>
+          <div>
+            <img src:="/home/urbain/ProjetGroup5/images/alarme.png">
+          </div>
           <div>Morgan oakley</div>
       </div>
       <div class="morganzone">
