feat:ajout icônes

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
           <div> <span class="mdi mdi-magnify" style="font-size: 20px; "></span> </div>
           <div class="sz"></div>
           <div><span class="mdi mdi-bell-ring-outline" style="font-size: 20px; "></span> </div>
-          <div>
-            <img src:="/home/urbain/ProjetGroup5/images/alarme.png">
+          <div> 
+              <img class="imgsearch" src="/home/urbain/ProjetGroup5/images/imagefruit.jpeg">
           </div>
-          <div>Morgan oakley</div>
+          <div class="morganadress">Morgan oakley</div>
       </div>
       <div class="morganzone">
-        <div> <img class="imgsearch" src="/home/urbain/ProjetGroup5/images/searchImage.png"></div>
+        <img class="imgsearch" src="/home/urbain/ProjetGroup5/images/imagefruit.jpeg">
         <div>
           <h6> Hi there <br>
             i'm Morgan Oakley(@ morgan)</h6>
