feat:ajout icônes

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <div class="container">
       <nav>
         <div class="Navarea">
-          <div> <span class="mdi mdi-magnify" style="font-size: 20px; "></span> </div>
+          <div> <span class="mdi mdi-magnify" style="font-size: 40px; "></span> </div>
           <div class="sz"></div>
           <div><span class="mdi mdi-bell-ring-outline" style="font-size: 20px; "></span> </div>
           <div> 
-              <img class="imgsearch" src="/home/urbain/ProjetGroup5/images/imagefruit.jpeg">
+              <img class="imgsearch2" src="/home/urbain/ProjetGroup5/images/imagefruit.jpeg">
           </div>
           <div class="morganadress">Morgan oakley</div>
       </div>
       <div class="morganzone">
-        <img class="imgsearch" src="/home/urbain/ProjetGroup5/images/imagefruit.jpeg">
+        <img class="imgsearch2" src="/home/urbain/ProjetGroup5/images/imagefruit.jpeg">
         <div>
           <h6> Hi there <br>
             i'm Morgan Oakley(@ morgan)</h6>
