feat:travail sur content1

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <nav>
         <div class="Navarea">
-          <div> <span class="mdi mdi-magnify" style="font-size: 40px; "></span> </div>
+          <div> <span class="mdi mdi-magnify" style="font-size: 40px;"></span> </div>
           <div class="sz"></div>
           <div><span class="mdi mdi-bell-ring-outline" style="font-size: 20px; "></span> </div>
           <div> 
@@ -25,8 +25,8 @@
       <div class="morganzone">
         <img class="imgsearch3" src="/home/urbain/ProjetGroup5/images/imagefruit.jpeg">
         <div>
-          <h6> Hi there <br>
-            i'm Morgan Oakley(@ morgan)</h6>
+          <h6> Hi there <h6>
+          <h5>i'm Morgan Oakley(@ morgan)</h5>
         </div>
         <div class="text"> New</div>
         <div class="text">Upload</div>
@@ -35,7 +35,25 @@
     </nav>
       <main>Main</main>
       <div id="sidebar">Sidebar</div>
-      <div id="content1">content1</div>
+
+      <div id="content1">Announcemements
+        <div class="premierepartie">
+          <h3>site Maintenance</h3>
+          <p>vestibulum condimentum tellus lacus in accumsam elit maximus ac. <br>
+            Donec hendredit sodales congue...</p>
+          </div>
+        <div>
+          <h3>Community Share Day</h3>
+          <p> Nam vel lectus tincidunt, rutum nulla  eu,ornare libero. <br>
+             Aliquam dictum acumsan portttotor...</p>
+        </div>
+        <div>
+          <h3> Updtaed Privated Policy</h3>
+          <p> phasellus efficitur nisi eget elit consectetus <br>
+          ,eget condimentum ante auctor. Cras fringilla sagttis sem <br>
+        in mattis...</p>
+        </div>
+      </div>
     </div>
 </body>
 </html>
