--- a/index.html
+++ b/index.html
@@ -36,17 +36,37 @@
       <main>Main</main>
       <div id="sidebar">Sidebar</div>
 
-      <div id="content1">Announcemements
+      <div id="content1">
         <div class="premierepartie">
           <h3>site Maintenance</h3>
           <p>vestibulum condimentum tellus lacus in accumsam elit maximus ac. <br>
             Donec hendredit sodales congue...</p>
           </div>
+          <hr>
         <div>
           <h3>Community Share Day</h3>
           <p> Nam vel lectus tincidunt, rutum nulla  eu,ornare libero. <br>
              Aliquam dictum acumsan portttotor...</p>
         </div>
+        <hr>
+        <div>
+          <h3> Updtaed Privated Policy</h3>
+          <p> phasellus efficitur nisi eget elit consectetus <br>
+          ,eget condimentum ante auctor. Cras fringilla sagttis sem <br>
+        in mattis...</p>
+          </div>
+        <hr>
+        <div class="deuxiemepartie">
+          <h3>site Maintenance</h3>
+          <p>vestibulum condimentum tellus lacus in accumsam elit maximus ac. <br>
+            Donec hendredit sodales congue...</p>
+          <hr>
+        <div>
+          <h3>Community Share Day</h3>
+          <p> Nam vel lectus tincidunt, rutum nulla  eu,ornare libero. <br>
+             Aliquam dictum acumsan portttotor...</p>
+        </div>
+        <hr>
         <div>
           <h3> Updtaed Privated Policy</h3>
           <p> phasellus efficitur nisi eget elit consectetus <br>
@@ -54,6 +74,9 @@
         in mattis...</p>
         </div>
       </div>
+
+      <div id="content2">
+        
     </div>
 </body>
 </html>
