feat:travail sur content1:deuxiemepartie

--- a/index.html
+++ b/index.html
@@ -36,44 +36,49 @@
       <main>Main</main>
       <div id="sidebar">Sidebar</div>
 
-      <div id="content1">
-        <div class="premierepartie">
-          <h3>site Maintenance</h3>
-          <p>vestibulum condimentum tellus lacus in accumsam elit maximus ac. <br>
-            Donec hendredit sodales congue...</p>
+        <div>
+          <h2>Announcements</h2>
+          <div id="content1">
+            <div class="premierepartie">
+              <h3>site Maintenance</h3>
+              <p>vestibulum condimentum tellus lacus in accumsam elit maximus ac. <br>
+                Donec hendredit sodales congue...</p>
+              </div>
+              <hr>
+            <div>
+              <h3>Community Share Day</h3>
+              <p> Nam vel lectus tincidunt, rutum nulla  eu,ornare libero. <br>
+                Aliquam dictum acumsan portttotor...</p>
+            </div>
+            <hr>
+            <div>
+              <h3> Updtaed Privated Policy</h3>
+              <p> phasellus efficitur nisi eget elit consectetus <br>
+              ,eget condimentum ante auctor. Cras fringilla sagttis sem <br>
+            in mattis...</p>
+              </div>
+            </div>
+            <div class="deuxiemepartie">
+              <h2>Trending</h2>
+              <h3>site Maintenance</h3>
+              <p>vestibulum condimentum tellus lacus in accumsam elit maximus ac. <br>
+                Donec hendredit sodales congue...</p>
+              <hr>
+            <div>
+              <h3>Community Share Day</h3>
+              <p> Nam vel lectus tincidunt, rutum nulla  eu,ornare libero. <br>
+                Aliquam dictum acumsan portttotor...</p>
+            </div>
+            <hr>
+            <div>
+              <h3> Updtaed Privated Policy</h3>
+              <p> phasellus efficitur nisi eget elit consectetus <br>
+              ,eget condimentum ante auctor. Cras fringilla sagttis sem <br>
+            in mattis...</p>
+            </div>
           </div>
-          <hr>
-        <div>
-          <h3>Community Share Day</h3>
-          <p> Nam vel lectus tincidunt, rutum nulla  eu,ornare libero. <br>
-             Aliquam dictum acumsan portttotor...</p>
         </div>
-        <hr>
-        <div>
-          <h3> Updtaed Privated Policy</h3>
-          <p> phasellus efficitur nisi eget elit consectetus <br>
-          ,eget condimentum ante auctor. Cras fringilla sagttis sem <br>
-        in mattis...</p>
-          </div>
-        <hr>
-        <div class="deuxiemepartie">
-          <h3>site Maintenance</h3>
-          <p>vestibulum condimentum tellus lacus in accumsam elit maximus ac. <br>
-            Donec hendredit sodales congue...</p>
-          <hr>
-        <div>
-          <h3>Community Share Day</h3>
-          <p> Nam vel lectus tincidunt, rutum nulla  eu,ornare libero. <br>
-             Aliquam dictum acumsan portttotor...</p>
-        </div>
-        <hr>
-        <div>
-          <h3> Updtaed Privated Policy</h3>
-          <p> phasellus efficitur nisi eget elit consectetus <br>
-          ,eget condimentum ante auctor. Cras fringilla sagttis sem <br>
-        in mattis...</p>
-        </div>
-      </div>
+      
 
       <div id="content2">
         
