--- a/index.html
+++ b/index.html
@@ -15,186 +15,6 @@
 
 <body>
     <div class="container">
-        <main>
-            <h4>Your Projects</h4>
-            <div class="cont-carte">
-                <div class="carte">
-                    <div>
-                        <h3>Super Cool project</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean volutpat eu sapien quis sagittis. Nunc a massa vel risus pulvinar fermentum.</p>
-                    </div>
-                    <div class="carte-icons">
-                        <div><span class="mdi mdi-star-plus-outline"></span></div>
-                        <div><span class="mdi mdi-eye-plus-outline">  </span></div>
-                        <div><span class="mdi mdi-source-branch"> </span></div>
-                    </div>
-                    <div class="carte">
-                    <div>
-                        <h3>Less cool Project</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean volutpat eu sapien quis sagittis. Nunc a massa vel risus pulvinar fermentum. Nunc a massa vel risus pulvinar fermentum. Nunc a massa vel risus pulvinar fermentum.</p>
-                    </div>
-
-                    <div class="carte-icons">
-                        <div><span class="mdi mdi-star-plus-outline"></span></div>
-                        <div><span class="mdi mdi-eye-plus-outline">  </span></div>
-                        <div><span class="mdi mdi-source-branch"> </span></div>
-                    </div>
-                </div>
-                <div class="carte">
-                    <div>
-                        <h3>Impossible App</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean volutpat eu sapien quis sagittis. Nunc a massa vel risus pulvinar fermentum.</p>
-                    </div>
-                    <div class="carte-icons">
-                        <div><span class="mdi mdi-star-plus-outline"></span></div>
-                        <div><span class="mdi mdi-eye-plus-outline">  </span></div>
-                        <div><span class="mdi mdi-source-branch"> </span></div>
-                    </div>
-                </div>
-                <div class="carte">
-                    <div>
-                        <h3>Easy Peasy App</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean volutpat eu sapien quis sagittis. Nunc a massa vel risus pulvinar fermentum.</p>
-                    </div>
-                    <div class="carte-icons">
-                        <div><span class="mdi mdi-star-plus-outline"></span></div>
-                        <div><span class="mdi mdi-eye-plus-outline">  </span></div>
-                        <div><span class="mdi mdi-source-branch"> </span></div>
-                    </div>
-                </div>
-                <div class="carte">
-                    <div>
-                        <h3>Ad Blocker </h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean volutpat eu sapien quis sagittis. Nunc a massa vel risus pulvinar fermentum.</p>
-                    </div>
-                    <div class="carte-icons">
-                        <div><span class="mdi mdi-star-plus-outline"></span></div>
-                        <div><span class="mdi mdi-eye-plus-outline">  </span></div>
-                        <div><span class="mdi mdi-source-branch"> </span></div>
-                    </div>
-                </div>
-               </div>
-            </div>
-          </main>
-      <nav>
-        <div class="Navarea">
-          <div> <span class="mdi mdi-magnify" style="font-size: 40px;"></span> </div>
-          <div class="sz"></div>
-          <div><span class="mdi mdi-bell-ring-outline" style="font-size: 20px; "></span> </div>
-          <div> 
-              <img class="imgsearch2" src="/home/urbain/ProjetGroup5/images/imagefruit.jpeg">
-          </div>
-          <div class="morganadress">Morgan oakley</div>
-      </div>
-      <div class="morganzone">
-        <img class="imgsearch3" src="/home/urbain/ProjetGroup5/images/imagefruit.jpeg">
-        <div>
-          <h6> Hi there <h6>
-          <h5>i'm Morgan Oakley(@ morgan)</h5>
-        </div>
-        <div class="text"> New</div>
-        <div class="text">Upload</div>
-        <div class="text">Share</div>
-      </div>
-    </nav>
-       <div id="content1">
-            <diV class="premierepartie">
-              <h3>Announcements</h3>
-              <div class="corps">
-                <div>
-                  <h3>site Maintenance</h3>
-                  <p>vestibulum condimentum tellus lacus in accumsam elit maximus ac. <br>
-                      Donec hendredit sodales congue...</p>
-                    <hr>
-                  </div>             
-                <div>
-                    <h3>Community Share Day</h3>
-                    <p> Nam vel lectus tincidunt, rutum nulla  eu,ornare libero. <br>
-                      Aliquam dictum acumsan portttotor...</p>
-                </div>
-                
-            </div>
-        <div class="deuxiemepartie">
-            <h2>Trending</h2>
-              <div class="agents">
-                <div class="agent">
-                  <div>
-                    <img src="/home/urbain/ProjetGroup5/images/imagechien.jpeg">
-                  </div>
-                  <div>
-                    <h3>@tegan</h3>
-                    <p>World Peace Builder</p>
-                  </div>
-                </div>
-                <div class="agent">
-                  <div>
-                    <img src="/home/urbain/ProjetGroup5/images/imagechien.jpeg">
-                   </div>
-                    <div>
-                      <h3>@Kendall</h3>
-                      <p>Changing</p>
-                    </div>
-                   </div>
-                   <div class="agent">
-                   <div>
-                    <img src="/home/urbain/ProjetGroup5/images/imagechien.jpeg">
-                   </div>
-
-                    <div>
-                        <h3>Money Maker</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean volutpat eu sapien quis sagittis. Nunc a massa vel risus pulvinar fermentum.Aenean volutpat eu sapien quis sagittis. Nunc a massa vel risus pulvinar fermentum.</p>
-                    </div>
-                </div> 
-           <div>      
-          </div>
-              <div>
-                <h3>site Maintenance</h3>
-                <p>vestibulum condimentum tellus lacus in accumsam elit maximus ac. <br>
-                    Donec hendredit sodales congue...</p>
-                  <hr>
-                </div>             
-              <div>
-                  <h3>Community Share Day</h3>
-                  <p> Nam vel lectus tincidunt, rutum nulla  eu,ornare libero. <br>
-                    Aliquam dictum acumsan portttotor...</p>
-              </div>
-                <hr>
-                <div>
-                  <h3> Updtaed Privated Policy</h3>
-                  <p> phasellus efficitur nisi eget elit consectetus <br>
-                  ,eget condimentum ante auctor. Cras fringilla sagttis sem <br>
-                in mattis...</p>
-                  </div>
-              <div>
-               <img src="/home/urbain/ProjetGroup5/images/imagechien.jpeg">
-               </div>
-               <div>
-                 <h3>@morgan</h3>
-                 <p>Super cool Project</p>
-               </div>
-             </div>
-             <div class="dot">
-              <div>
-               <img src="/home/urbain/ProjetGroup5/images/imagechien.jpeg">
-              </div>
-               <div>
-                 <h3>@Kendall</h3>
-                 <p>Changing</p>
-              </div>
-             </div>
-              <hr>
-             <div class="dot">
-              <div>
-               <img src="/home/urbain/ProjetGroup5/images/imagechien.jpeg">
-              </div>
-               <div>
-                 <h3>@alex</h3>
-                 <p>No Traffic maker</p>
-               </div>
-             </div>
-
-            </div>
-        </main>
         <div id="sidebar">
             <ul class="side-content1">
                 <li class='titre'><span class="mdi mdi-view-dashboard" style="font-size: 30px; ">  Dashboad</span></li>
@@ -210,11 +30,179 @@
                 <li class=''><span class="mdi mdi-help" style="font-size: 20px; ">  Support</span></li>
                 <li class=''><span class="mdi mdi-shield-check" style="font-size: 20px; ">  Privacy</span></li>
             </ul>
-
         </div>
+        <main>
+            <h4>Your Projects</h4>
+            <div class="cont-carte">
+                <div class="carte">
+                    <div>
+                        <h3>Super Cool project</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean volutpat eu sapien quis sagittis. Nunc a massa vel risus pulvinar fermentum.</p>
+                    </div>
+                    <div class="carte-icons">
+                        <div><span class="mdi mdi-star-plus-outline"></span></div>
+                        <div><span class="mdi mdi-eye-plus-outline">  </span></div>
+                        <div><span class="mdi mdi-source-branch"> </span></div>
+                    </div>
+                    <div class="carte">
+                        <div>
+                            <h3>Less cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean volutpat eu sapien quis sagittis. Nunc a massa vel risus pulvinar fermentum. Nunc a massa vel risus pulvinar fermentum. Nunc a massa vel risus pulvinar fermentum.</p>
+                        </div>
 
-        <div id="content1">content1</div>
-    </div>
+                        <div class="carte-icons">
+                            <div><span class="mdi mdi-star-plus-outline"></span></div>
+                            <div><span class="mdi mdi-eye-plus-outline">  </span></div>
+                            <div><span class="mdi mdi-source-branch"> </span></div>
+                        </div>
+                    </div>
+                    <div class="carte">
+                        <div>
+                            <h3>Impossible App</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean volutpat eu sapien quis sagittis. Nunc a massa vel risus pulvinar fermentum.</p>
+                        </div>
+                        <div class="carte-icons">
+                            <div><span class="mdi mdi-star-plus-outline"></span></div>
+                            <div><span class="mdi mdi-eye-plus-outline">  </span></div>
+                            <div><span class="mdi mdi-source-branch"> </span></div>
+                        </div>
+                    </div>
+                    <div class="carte">
+                        <div>
+                            <h3>Easy Peasy App</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean volutpat eu sapien quis sagittis. Nunc a massa vel risus pulvinar fermentum.</p>
+                        </div>
+                        <div class="carte-icons">
+                            <div><span class="mdi mdi-star-plus-outline"></span></div>
+                            <div><span class="mdi mdi-eye-plus-outline">  </span></div>
+                            <div><span class="mdi mdi-source-branch"> </span></div>
+                        </div>
+                    </div>
+                    <div class="carte">
+                        <div>
+                            <h3>Ad Blocker </h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean volutpat eu sapien quis sagittis. Nunc a massa vel risus pulvinar fermentum.</p>
+                        </div>
+                        <div class="carte-icons">
+                            <div><span class="mdi mdi-star-plus-outline"></span></div>
+                            <div><span class="mdi mdi-eye-plus-outline">  </span></div>
+                            <div><span class="mdi mdi-source-branch"> </span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+
+        <nav>
+            <div class="Navarea">
+                <div> <span class="mdi mdi-magnify" style="font-size: 40px;"></span> </div>
+                <div class="sz"></div>
+                <div><span class="mdi mdi-bell-ring-outline" style="font-size: 20px; "></span> </div>
+                <div>
+                    <img class="imgsearch2" src="images/imagefruit.jpeg">
+                </div>
+                <div class="morganadress">Morgan oakley</div>
+            </div>
+            <div class="morganzone">
+                <img class="imgsearch3" src="images/imagefruit.jpeg">
+                <div>
+                    <h6> Hi there
+                        <h6>
+                            <h5>i'm Morgan Oakley(@ morgan)</h5>
+                </div>
+                <div class="text"> New</div>
+                <div class="text">Upload</div>
+                <div class="text">Share</div>
+            </div>
+        </nav>
+        <div id="content1">
+            <diV class="premierepartie">
+                <h3>Announcements</h3>
+                <div class="corps">
+                    <div>
+                        <h3>site Maintenance</h3>
+                        <p>vestibulum condimentum tellus lacus in accumsam elit maximus ac. <br> Donec hendredit sodales congue...</p>
+                        <hr>
+                    </div>
+                    <div>
+                        <h3>Community Share Day</h3>
+                        <p> Nam vel lectus tincidunt, rutum nulla eu,ornare libero. <br> Aliquam dictum acumsan portttotor...</p>
+                    </div>
+
+                </div>
+                <div class="deuxiemepartie">
+                    <h2>Trending</h2>
+                    <div class="agents">
+                        <div class="agent">
+                            <div>
+                                <img src="images/imagechien.jpeg">
+                            </div>
+                            <div>
+                                <h3>@tegan</h3>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div class="agent">
+                            <div>
+                                <img src="images/imagechien.jpeg">
+                            </div>
+                            <div>
+                                <h3>@Kendall</h3>
+                                <p>Changing</p>
+                            </div>
+                        </div>
+                        <div class="agent">
+                            <div>
+                                <img src="images/imagechien.jpeg">
+                            </div>
+                            <div>
+                                <h3>@Kendall</h3>
+                                <p>Changing</p>
+                            </div>
+                        </div>
+                        <div class="agent">
+                            <div>
+                                <img src="images/imagechien.jpeg">
+                            </div>
+                            <div>
+                                <h3>@morgan</h3>
+                                <p>Super cool Project</p>
+                            </div>
+                        </div>
+                        <div class="agent">
+                            <div>
+                                <img src="images/imagechien.jpeg">
+                            </div>
+                            <div>
+                                <h3>@morgan</h3>
+                                <p>Super cool Project</p>
+                            </div>
+                        </div>
+
+                        <h3>Money Maker</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean volutpat eu sapien quis sagittis. Nunc a massa vel risus pulvinar fermentum.Aenean volutpat eu sapien quis sagittis. Nunc a massa vel risus pulvinar fermentum.</p>
+                    </div>
+                </div>
+                <div>
+                </div>
+                <div>
+                    <h3>site Maintenance</h3>
+                    <p>vestibulum condimentum tellus lacus in accumsam elit maximus ac. <br> Donec hendredit sodales congue...</p>
+                    <hr>
+                </div>
+                <div>
+                    <h3>Community Share Day</h3>
+                    <p> Nam vel lectus tincidunt, rutum nulla eu,ornare libero. <br> Aliquam dictum acumsan portttotor...</p>
+                </div>
+                <hr>
+                <div>
+                    <h3> Updtaed Privated Policy</h3>
+                    <p> phasellus efficitur nisi eget elit consectetus <br> ,eget condimentum ante auctor. Cras fringilla sagttis sem <br> in mattis...</p>
+                </div>
+
+            </div>
+        </div>
+    </diV>
 </body>
 
 </html>
