--- a/index.html
+++ b/index.html
@@ -90,6 +90,17 @@
                         <div><span class="mdi mdi-source-branch"> </span></div>
                     </div>
                 </div>
+                <div class="carte">
+                    <div>
+                        <h3>Ad Blocker </h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean volutpat eu sapien quis sagittis. Nunc a massa vel risus pulvinar fermentum.</p>
+                    </div>
+                    <div class="carte-icons">
+                        <div><span class="mdi mdi-star-plus-outline"></span></div>
+                        <div><span class="mdi mdi-eye-plus-outline">  </span></div>
+                        <div><span class="mdi mdi-source-branch"> </span></div>
+                    </div>
+                </div>
             </div>
         </main>
 
